--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,38 +53,45 @@ services:
     networks:
       - trainingground-network
 
-  # Rust API — основной backend (будет добавлен в A2)
-  # rust-api:
-  #   build:
-  #     context: ./backend/rust-api
-  #     dockerfile: Dockerfile
-  #   container_name: trainingground-rust-api
-  #   restart: unless-stopped
-  #   ports:
-  #     - "${RUST_API_PORT:-3000}:3000"
-  #   environment:
-  #     RUST_LOG: ${RUST_LOG:-info}
-  #     MONGODB_URI: mongodb://${MONGO_USER:-admin}:${MONGO_PASSWORD:-password}@mongodb:27017/${MONGO_DB:-trainingground}?authSource=admin
-  #     REDIS_URL: redis://:${REDIS_PASSWORD:-redispass}@redis:6379
-  #     QDRANT_URL: http://qdrant:6333
-  #     QDRANT_API_KEY: ${QDRANT_API_KEY:-qdrantkey}
-  #     JWT_SECRET: ${JWT_SECRET:-your-secret-key}
-  #     YANDEX_CLIENT_ID: ${YANDEX_CLIENT_ID}
-  #     YANDEX_CLIENT_SECRET: ${YANDEX_CLIENT_SECRET}
-  #     VK_CLIENT_ID: ${VK_CLIENT_ID}
-  #     VK_CLIENT_SECRET: ${VK_CLIENT_SECRET}
-  #     GOSUSLUGI_CLIENT_ID: ${GOSUSLUGI_CLIENT_ID}
-  #     GOSUSLUGI_CLIENT_SECRET: ${GOSUSLUGI_CLIENT_SECRET}
-  #   depends_on:
-  #     - mongodb
-  #     - redis
-  #     - qdrant
-  #   networks:
-  #     - trainingground-network
-  #   volumes:
-  #     - ./backend/rust-api/src:/app/src
-  #     - ./backend/rust-api/Cargo.toml:/app/Cargo.toml
-  #     - ./backend/rust-api/Cargo.lock:/app/Cargo.lock
+  # Rust API — Lesson Execution Service (A2)
+  rust-api:
+    build:
+      context: ./backend/rust-api
+      dockerfile: Dockerfile
+    container_name: trainingground-rust-api
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    environment:
+      RUST_LOG: ${RUST_LOG:-info}
+      APP_ENV: ${APP_ENV:-prod}
+      RATE_LIMIT_DISABLED: ${RATE_LIMIT_DISABLED:-0}
+      RATE_LIMIT_PER_IP: ${RATE_LIMIT_PER_IP:-200}
+      SESSION_DURATION_SECONDS: ${SESSION_DURATION_SECONDS:-3600}
+      HINTS_MAX_PER_SESSION: ${HINTS_MAX_PER_SESSION:-2}
+      HINTS_PYTHON_API_ENABLED: ${HINTS_PYTHON_API_ENABLED:-0}
+      SSE_MAX_STREAM_SECONDS: ${SSE_MAX_STREAM_SECONDS:-3600}
+      SSE_TICK_INTERVAL_MS: ${SSE_TICK_INTERVAL_MS:-1000}
+      ANTICHEAT_DISABLED: ${ANTICHEAT_DISABLED:-0}
+      APP__DATABASE__MONGO_URI: mongodb://${MONGO_USER:-admin}:${MONGO_PASSWORD:-password}@mongodb:27017/${MONGO_DB:-trainingground}?authSource=admin
+      APP__REDIS__URI: redis://:${REDIS_PASSWORD:-redispass}@redis:6379
+      APP__AUTH__JWT_SECRET: ${JWT_SECRET:-your-secret-key-change-in-prod}
+      APP__PYTHON_API__URL: http://python-generator:8000
+      OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT:-http://jaeger:4318}
+      OTEL_SERVICE_NAME: rust-api
+    depends_on:
+      mongodb:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    networks:
+      - trainingground-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8081/health"]
+      interval: 30s
+      timeout: 3s
+      start_period: 10s
+      retries: 3
 
   # Python Generator — генерация заданий и объяснений (будет добавлен в A3)
   # python-generator:
