security: устранение слабых паролей и fail-fast проверки

--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,15 @@
 NODE_ENV=development
 
 # MongoDB
-MONGODB_URI=mongodb://localhost:27017/trainingground
+MONGO_USER=admin
+MONGO_PASSWORD=changeme
+MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/trainingground
 MONGODB_DATABASE=trainingground
 
 # Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=changeme
 
 # Qdrant
 QDRANT_URL=http://localhost:6333
@@ -23,8 +25,8 @@ JWT_SECRET=your-secret-key-change-in-production
 
 # Python Generator
 PYTHON_API_PORT=9000
-YANDEX_GPT_API_KEY=your-yandex-gpt-api-key
-YANDEX_GPT_FOLDER_ID=your-folder-id
+YANDEX_GPT_API_KEY=
+YANDEX_GPT_FOLDER_ID=
 
 # Frontend
 VITE_API_URL=http://localhost:8080
@@ -37,3 +39,6 @@ LOG_LEVEL=info
 ENABLE_SSO=false
 ENABLE_YANDEX_GPT=true
 ENABLE_ANTICHEAT=true
+ 
+# Grafana admin password
+GRAFANA_PASSWORD=
