--- a/backend/rust-api/.env.example
+++ b/backend/rust-api/.env.example
@@ -1,6 +1,12 @@
-MONGO_URI=mongodb://admin:password@mongodb:27017
-REDIS_URI=redis://:redispass@redis:6379
-MONGO_DATABASE=trainingground
-JWT_SECRET=dev-secret-change-in-production
-PYTHON_API_URL=http://python-generator:8000
-RUST_LOG=trainingground_api=debug,tower_http=debug
+# Пример конфигурации Rust API
+# Rust API автоматически загружает ../../.env через dotenvy
+# Этот файл показывает опциональные локальные переопределения для разработки
+
+# Опционально: переопределить уровень логирования для локальной разработки
+# RUST_LOG=trainingground_api=debug,tower_http=debug
+
+# Опционально: переопределить URL Python API для локального тестирования
+# PYTHON_API_URL=http://localhost:8000
+
+# Все секреты (MONGO_URI, REDIS_URI, JWT_SECRET) берутся из корневого .env
+# Сгенерировать пароли: bash ../../infra/scripts/generate_secrets.sh
