--- a/backend/rust-api/.env.test
+++ b/backend/rust-api/.env.test
@@ -1,7 +1,10 @@
-# Test environment configuration - uses localhost instead of Docker hostnames
-MONGO_URI=mongodb://admin:password@localhost:27017
-REDIS_URI=redis://:redispass@127.0.0.1:6379
+# Конфигурация тестового окружения
+# Использует localhost вместо имён хостов Docker
+# ВНИМАНИЕ: эти настройки ТОЛЬКО для локального тестирования — НЕ ДЛЯ ПРОДАКШНА!
+
+MONGO_URI=${MONGODB_URI:-mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/trainingground_test?authSource=admin}
+REDIS_URI=${REDIS_URL:-redis://:${REDIS_PASSWORD}@127.0.0.1:6379}
 MONGO_DATABASE=trainingground_test
-JWT_SECRET=test-secret
+JWT_SECRET=${JWT_SECRET:-test-secret-only-for-local-ci}
 PYTHON_API_URL=http://localhost:8000
 RUST_LOG=trainingground_api=debug,tower_http=debug
