feat: replica set, health checks и мониторинг для staging

--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,44 @@
 # Конфигурация окружения для TrainingGround
 
+# Docker Compose профили (monitoring включает Prometheus, Grafana, Jaeger, Exporters)
+# Оставьте пустым для основных сервисов, используйте "monitoring" для полного стека
+COMPOSE_PROFILES=monitoring
+
 # Окружение (development, test, staging, production)
 NODE_ENV=development
 
-# MongoDB
+# MongoDB Replica Set (3 узла для Change Streams)
 MONGO_USER=admin
 MONGO_PASSWORD=changeme
-MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/trainingground
+MONGO_DB=trainingground
+# Подключение к replica set (все 3 ноды)
+MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0
 MONGODB_DATABASE=trainingground
 
-# Redis
+# Redis (кеш и сессии)
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=changeme
 
-# Qdrant
+# Qdrant (векторная БД)
 QDRANT_URL=http://localhost:6333
 QDRANT_API_KEY=
 
-# Rust API
+# Rust API (основной API)
 RUST_API_PORT=8080
 RUST_API_HOST=0.0.0.0
 JWT_SECRET=your-secret-key-change-in-production
 
-# Python Generator
+# Python Generator (генератор заданий / Explanation API)
 PYTHON_API_PORT=9000
 YANDEX_GPT_API_KEY=
 YANDEX_GPT_FOLDER_ID=
 
-# Frontend
+# Frontend (PWA)
 VITE_API_URL=http://localhost:8080
 VITE_WS_URL=ws://localhost:8080
 
-# Logging
+# Логирование
 LOG_LEVEL=info
 
 # Feature Flags (для разработки)
@@ -40,5 +46,5 @@ ENABLE_SSO=false
 ENABLE_YANDEX_GPT=true
 ENABLE_ANTICHEAT=true
  
-# Grafana admin password
+# Пароль администратора Grafana
 GRAFANA_PASSWORD=
