--- a/backend/rust-api/Cargo.toml
+++ b/backend/rust-api/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/main.rs"
 
 [dependencies]
 # Web framework
-axum = "0.8.7"
+axum = "0.8.8"
 tokio = { version = "1", features = ["full"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-gzip"] }
@@ -21,7 +21,7 @@ hyper = "1.0"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = "1.0.146"
 
 # Database clients
 mongodb = "3.4.1"
@@ -44,7 +44,7 @@ uuid = { version = "1.6", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 
 # HTTP client
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12.28", features = ["json"] }
 
 # Validation
 validator = { version = "0.20.0", features = ["derive"] }
@@ -63,6 +63,10 @@ async-trait = "0.1"
 # Error handling
 thiserror = "2.0.17"
 anyhow = "1.0"
+
+# Metrics
+prometheus = "0.14.0"
+lazy_static = "1.4"
 
 [dev-dependencies]
 # Testing
