--- a/backend/rust-api/config/dev.toml
+++ b/backend/rust-api/config/dev.toml
@@ -6,11 +6,11 @@ port = 8081
 workers = 4
 
 [database]
-mongo_uri = "mongodb://localhost:27017"
-mongo_database = "trainingground_dev"
+mongo_uri = "mongodb://admin:changeMe123@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0"
+mongo_database = "trainingground"
 
 [redis]
-uri = "redis://127.0.0.1:6379/0"
+uri = "redis://:changeMeRedis@127.0.0.1:6379/0"
 pool_size = 10
 connection_timeout_secs = 30
 
