--- a/backend/rust-api/.env.test
+++ b/backend/rust-api/.env.test
@@ -1,10 +1,14 @@
-# Конфигурация тестового окружения
-# Использует localhost вместо имён хостов Docker
-# ВНИМАНИЕ: эти настройки ТОЛЬКО для локального тестирования — НЕ ДЛЯ ПРОДАКШНА!
+# Тестовая конфигурация для локальных запусков
 
-MONGO_URI=${MONGODB_URI:-mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/trainingground_test?authSource=admin}
-REDIS_URI=${REDIS_URL:-redis://:${REDIS_PASSWORD}@127.0.0.1:6379}
+SKIP_ROOT_ENV=1
+APP_ENV=test
+MONGO_URI=mongodb://admin:changeMe123@localhost:27017/trainingground_test?authSource=admin&directConnection=true
+REDIS_URI=redis://:changeMeRedis@127.0.0.1:6379/0
 MONGO_DATABASE=trainingground_test
-JWT_SECRET=${JWT_SECRET:-test-secret-only-for-local-ci}
+JWT_SECRET=test-secret-only-for-local-ci
 PYTHON_API_URL=http://localhost:8000
 RUST_LOG=trainingground_api=debug,tower_http=debug
+APP__DATABASE__MONGO_URI=mongodb://admin:changeMe123@localhost:27017/trainingground_test?authSource=admin&directConnection=true
+APP__DATABASE__MONGO_DATABASE=trainingground_test
+APP__REDIS__URI=redis://:changeMeRedis@127.0.0.1:6379/0
+APP__PYTHON_API__URL=http://localhost:8000
