--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -278,6 +278,11 @@ services:
       QDRANT_API_KEY: ${QDRANT_API_KEY:-}
       YANDEXGPT_API_KEY: ${YANDEXGPT_API_KEY:-}
       YANDEXGPT_FOLDER_ID: ${YANDEXGPT_FOLDER_ID:-}
+      YANDEXGPT_MODEL: ${YANDEXGPT_MODEL:-yandexgpt-lite}
+      YANDEXGPT_TEMPERATURE: ${YANDEXGPT_TEMPERATURE:-0.2}
+      YANDEXGPT_MAX_TOKENS: ${YANDEXGPT_MAX_TOKENS:-700}
+      YANDEXGPT_TIMEOUT_SECONDS: ${YANDEXGPT_TIMEOUT_SECONDS:-2.0}
+      YANDEXGPT_SYSTEM_PROMPT: ${YANDEXGPT_SYSTEM_PROMPT:-}
       LOG_LEVEL: ${PYTHON_LOG_LEVEL:-INFO}
       EXPLANATION_YANDEXGPT_ENABLED: ${EXPLANATION_YANDEXGPT_ENABLED:-1}
     depends_on:
