--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ MONGO_USER=admin
 MONGO_PASSWORD=changeme
 MONGO_DB=trainingground
 # Подключение к replica set (все 3 ноды)
-MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0
+MONGODB_URI=mongodb://admin:changeme@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0
 MONGODB_DATABASE=trainingground
 
 # Redis (кеш и сессии)
@@ -31,8 +31,15 @@ JWT_SECRET=your-secret-key-change-in-production
 
 # Python Generator (генератор заданий / Explanation API)
 PYTHON_API_PORT=9000
-YANDEX_GPT_API_KEY=
-YANDEX_GPT_FOLDER_ID=
+YANDEXGPT_API_KEY=
+YANDEXGPT_FOLDER_ID=
+YANDEXGPT_MODEL=yandexgpt-lite
+YANDEXGPT_TEMPERATURE=0.2
+YANDEXGPT_MAX_TOKENS=700
+YANDEXGPT_TIMEOUT_SECONDS=2.0
+# Опционально: переопределить системный промпт
+# YANDEXGPT_SYSTEM_PROMPT=Ты — преподаватель русского языка. Объясняй ошибки кратко, с примерами и отсылками к правилам.
+EXPLANATION_YANDEXGPT_ENABLED=1
 
 # Frontend (PWA)
 VITE_API_URL=http://localhost:8080
