--- a/backend/python-generator/pyproject.toml
+++ b/backend/python-generator/pyproject.toml
@@ -65,3 +65,27 @@ ignore = ["E203", "E501"]
 python_version = "3.11"
 ignore_missing_imports = true
 warn_unused_configs = true
+follow_imports = "skip"
+no_implicit_optional = false
+warn_return_any = false
+warn_unused_ignores = false
+# Быстрая проверка без анализа зависимостей
+cache_dir = ".mypy_cache"
+incremental = true
+
+[[tool.mypy.overrides]]
+module = [
+    "sentence_transformers.*",
+    "natasha.*",
+    "pymorphy2.*",
+    "fasttext.*",
+    "transformers.*",
+    "torch.*",
+    "numpy.*",
+    "scipy.*",
+    "qdrant_client.*",
+    "motor.*",
+    "prometheus_client.*"
+]
+ignore_errors = true
+follow_imports = "skip"
