--- a/backend/rust-api/Cargo.toml
+++ b/backend/rust-api/Cargo.toml
@@ -54,6 +54,9 @@ rand = "0.9.2"
 base64 = "0.22"
 
 # JWT & Auth
+# ИЗВЕСТНАЯ УЯЗВИМОСТЬ: RUSTSEC-2023-0071 в rsa 0.9.9 (Marvin timing attack, severity 5.9 medium)
+# Решения пока нет, но риск низкий т.к. эксплуатация требует точного timing анализа
+# aws-lc-rs требует NASM/CMAKE на Windows, остаемся на rust_crypto до исправления в rsa
 jsonwebtoken = { version = "10.2.0", default-features = false, features = ["use_pem", "rust_crypto"] }
 
 # Async utilities
@@ -74,6 +77,7 @@ tokio-test = "0.4"
 tower = { version = "0.5", features = ["util"] }
 hyper = { version = "1.0", features = ["full"] }
 http-body-util = "0.1"
+serial_test = "3.2"
 
 [profile.release]
 opt-level = 3
