--- a/backend/python-generator/Dockerfile
+++ b/backend/python-generator/Dockerfile
@@ -9,13 +9,25 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends build-essential git curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY backend/python-generator/pyproject.toml ./pyproject.toml
-COPY backend/python-generator/README.md ./README.md
-COPY backend/python-generator/src ./src
-COPY backend/python-generator/scripts ./scripts
+# Upgrade pip and install build tools
+RUN pip install --upgrade pip setuptools wheel
 
-RUN pip install --upgrade pip \
-    && pip install --no-cache-dir -e .
+# Layer 1: Install base dependencies (cached unless requirements-base.txt changes)
+COPY requirements-base.txt ./requirements-base.txt
+RUN pip install --no-cache-dir -r requirements-base.txt
+
+# Layer 2: Install ML dependencies (cached unless requirements-ml.txt changes)
+COPY requirements-ml.txt ./requirements-ml.txt
+RUN pip install --no-cache-dir --prefer-binary -r requirements-ml.txt
+
+# Layer 3: Copy application code (changes frequently)
+COPY pyproject.toml ./pyproject.toml
+COPY README.md ./README.md
+COPY src ./src
+COPY scripts ./scripts
+
+# Install the package itself (fast, dependencies already installed)
+RUN pip install --no-cache-dir --no-deps -e .
 
 EXPOSE 8000
 
