--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "noEmit": true,
+    "skipLibCheck": true,
     "types": ["vite/client", "mocha"],
     "baseUrl": ".",
     "paths": {
