--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,18 @@ dist/
 build/
 coverage/
 .cache/
+dev-dist/
+
+# Test results and reports
+test-results/
+playwright-report/
+lighthouse-report.html
+lighthouse-report.json
+.nyc_output/
+
+# Storybook build output
+storybook-static/
+storybook-out/
 
 # Rust
 target/
@@ -104,4 +116,3 @@ tests/performance/mongo_server_status.txt
 tests/performance/results_smoke.jsondocker
 tests/performance/rust-api-logs.txtk6
 tasks/SECURITY-AUDIT-2025-12-22.md
-nul
