--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -3,11 +3,13 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
   "include": [
     "vite.config.ts",
     "vitest.config.ts",
-    "web-test-runner.config.mjs"
+    "web-test-runner.config.mjs",
+    "playwright.config.ts"
   ]
 }
